===========================================================================
2013-10-29      version 0.19.3
===========================================================================
2013-10-29:	James Osborn
	Removed unused su3reunit from hisq_links_p.c.
	Finished adding gauge heatbath.
	Changed gauge_*_qdp API to not use QOP_GaugeField.

===========================================================================
2013-10-26      version 0.19.2
===========================================================================
2013-10-26:	James Osborn
	Added Nc=1 library.
	Fixed compiling with --enable-nc=3.
	Started adding gauge heatbath.

===========================================================================
2013-09-06      version 0.19.1
===========================================================================
2013-09-02:	James Osborn
	Fixed wilson force declarations.

2013-05-27:	James Osborn
	Increased QOP_MAX_NAIK to 20.
	Fixed Wilson and gauge flop counts for arbitrary Nc.
	Added QOP_info_t to QOP_staples and _deriv.

===========================================================================
2013-04-16      version 0.19.0
===========================================================================
2013-04-16:	James Osborn
	Initial checkin of Wilson MG code.

2013-03-22:	James Osborn
	Added adjoint plaquette to gauge action.

===========================================================================
2013-03-19      version 0.18.5
===========================================================================
2013-03-19:	James Osborn
	Added *_ZERO initializers for many structures.

2013-03-02:	James Osborn
	Fixed crash in staples deriv.

2013-02-21:	James Osborn
	Added generic staples routine and derivative.

2013-02-07:	James Osborn
	Some fixes to asqtad routines.

2013-01-10:	James Osborn
	Fixed fat7 derivative routine.

===========================================================================
2012-12-19      version 0.18.4