@@ -1,3 +1,6 @@
+2014-01-16:	James Osborn
+	Added U(1) gauge heatbath from Alexei.
+
 ===========================================================================
 2013-10-29      version 0.19.3
 ===========================================================================
